# static-server

./: Cargo.toml
file_src/: index.html  not_found.html
src/: main.rs  server.rs  settings.rs
