[package]
name = "static_server"
description = "Simple HTTP server"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4.6", features = ["cargo"]}
hyper = { version = "1.0.1", features = ["full"]}
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7.10"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
futures-util = { version = "0.3", default-features = false }

